<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_curso">Nome do Curso desejado</string>
    <string name="txt_hint_edit_numero_telefone">Telefone de Contato</string>
    <string name="button_limpar">LIMPAR</string>
    <string name="button_salvar">SALVAR</string>
    <string name="button_finalizar">FINALIZAR</string>
</resources>